Readded ref/alt columns but with fixed lengths and soft-wrap style. Added link-out to ExAC Added validation icon as it's own thing.

--- a/src/main/webapp/resources/css/variant.css
+++ b/src/main/webapp/resources/css/variant.css
@@ -219,3 +219,9 @@ td.panelGridKey {
     color:cornflowerblue;
 
 }
+
+td.allele {
+    table-layout: fixed;
+    word-wrap: break-word;
+    padding: 4px 2px !important ;
+}
